--- a/daw/proUno/indiceProUno.html
+++ b/daw/proUno/indiceProUno.html
@@ -23,65 +23,65 @@
         <section class="temaIndice">
             <span>1.- Introducción a la programación</span>
             <ul>
-                <li><a href="./proUno.html#1.1">Representaciones gráficas</a></li>
-                <li><a href="./proUno.html#1.2">Características de los diagramas de flujo</a></li>
-                <li><a href="./proUno.html#1.3">Características del pseudocódigo</a></li>
-                <li><a href="./proUno.html#1.4">Comunicación de un sistema informático</a></li>
-                <li><a href="./proUno.html#1.5">Características del lenguaje de alto nivel</a></li>
-                <li><a href="./proUno.html#1.6">Características del lenguaje de bajo nivel</a></li>
-                <li><a href="./proUno.html#1.7">Lenguajes compilados e interpretados</a></li>
+                <li><a href="./proUno.html#subUno">Representaciones gráficas</a></li>
+                <li><a href="./proUno.html#subDos">Características de los diagramas de flujo</a></li>
+                <li><a href="./proUno.html#subTres">Características del pseudocódigo</a></li>
+                <li><a href="./proUno.html#subCuatro">Comunicación de un sistema informático</a></li>
+                <li><a href="./proUno.html#subCinco">Características del lenguaje de alto nivel</a></li>
+                <li><a href="./proUno.html#subSeis">Características del lenguaje de bajo nivel</a></li>
+                <li><a href="./proUno.html#subSiete">Lenguajes compilados e interpretados</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>2.- Estructura de un programa informático</span>
             <ul>
-                <li><a href="./proDos.html#2.1">Bloques de un programa de código</a></li>
-                <li><a href="./proDos.html#2.2">Variables. Usos y tipos</a></li>
-                <li><a href="./proDos.html#2.3">Constantes y literales. Tipos y utilidades</a></li>
-                <li><a href="./proDos.html#2.4">Operadores del lenguaje de programación</a></li>
-                <li><a href="./proDos.html#2.5">Conversiones de tipos de clase</a></li>
-                <li><a href="./proDos.html#2.6">Comentarios al código</a></li>
+                <li><a href="./proDos.html#subUno">Bloques de un programa de código</a></li>
+                <li><a href="./proDos.html#subDos">Variables. Usos y tipos</a></li>
+                <li><a href="./proDos.html#subTres">Constantes y literales. Tipos y utilidades</a></li>
+                <li><a href="./proDos.html#subCuatro">Operadores del lenguaje de programación</a></li>
+                <li><a href="./proDos.html#subCinco">Conversiones de tipos de clase</a></li>
+                <li><a href="./proDos.html#subSeis">Comentarios al código</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Programación Estructurada</span>
             <ul>
-                <li><a href="./proTres.html#3.1">Fundamentos de programación</a></li>
-                <li><a href="./proTres.html#3.2">Introducción a la algoritmia y herramientas de diseño</a></li>
-                <li><a href="./proTres.html#3.3">Ciclo de vida de un proyecto software</a></li>
-                <li><a href="./proTres.html#3.4">Prueba de programas</a></li>
-                <li><a href="./proTres.html#3.5">Tipos de datos: Simples y compuestos</a></li>
-                <li><a href="./proTres.html#3.6">Estructuras de selección (Condicionales)</a></li>
-                <li><a href="./proTres.html#3.7">Estructuras de repetición</a></li>
-                <li><a href="./proTres.html#3.8">Estructuras de salto</a></li>
-                <li><a href="./proTres.html#3.9">Tratamiento de cadenas</a></li>
-                <li><a href="./proTres.html#3.10">Depuración de errores</a></li>
-                <li><a href="./proTres.html#3.11">Documentación de programas</a></li>
-                <li><a href="./proTres.html#3.12">Entornos de desarrollo de programas</a></li>
+                <li><a href="./proTres.html#subUno">Fundamentos de programación</a></li>
+                <li><a href="./proTres.html#subDos">Introducción a la algoritmia y herramientas de diseño</a></li>
+                <li><a href="./proTres.html#subTres">Ciclo de vida de un proyecto software</a></li>
+                <li><a href="./proTres.html#subCuatro">Prueba de programas</a></li>
+                <li><a href="./proTres.html#subCinco">Tipos de datos: Simples y compuestos</a></li>
+                <li><a href="./proTres.html#subSeis">Estructuras de selección (Condicionales)</a></li>
+                <li><a href="./proTres.html#subSiete">Estructuras de repetición</a></li>
+                <li><a href="./proTres.html#subOcho">Estructuras de salto</a></li>
+                <li><a href="./proTres.html#subNueve">Tratamiento de cadenas</a></li>
+                <li><a href="./proTres.html#subDiez">Depuración de errores</a></li>
+                <li><a href="./proTres.html#subOnce">Documentación de programas</a></li>
+                <li><a href="./proTres.html#subDoce">Entornos de desarrollo de programas</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Programación Modular</span>
             <ul>
-                <li><a href="./proCuatro.html#4.1">Concepto</a></li>
-                <li><a href="./proCuatro.html#4.2">Ventajas e inconvenientes</a></li>
-                <li><a href="./proCuatro.html#4.3">Análisis descendente (top down)</a></li>
-                <li><a href="./proCuatro.html#4.4">Modulación de programas. Subprogramas</a></li>
-                <li><a href="./proCuatro.html#4.5">Llamadas a funciones (métodos). Tipos y funcionamiento</a></li>
-                <li><a href="./proCuatro.html#4.6">Ámbito de las llamadas a funciones</a></li>
-                <li><a href="./proCuatro.html#4.7">Prueba, depuración y comentario de programas</a></li>
-                <li><a href="./proCuatro.html#4.8">Concepto de librerías</a></li>
-                <li><a href="./proCuatro.html#4.9">Uso de librerías</a></li>
-                <li><a href="./proCuatro.html#4.10">Introducción al concepto de recursividad</a></li>
+                <li><a href="./proCuatro.html#subUno">Concepto</a></li>
+                <li><a href="./proCuatro.html#subDos">Ventajas e inconvenientes</a></li>
+                <li><a href="./proCuatro.html#subTres">Análisis descendente (top down)</a></li>
+                <li><a href="./proCuatro.html#subCuatro">Modulación de programas. Subprogramas</a></li>
+                <li><a href="./proCuatro.html#subCinco">Llamadas a funciones (métodos). Tipos y funcionamiento</a></li>
+                <li><a href="./proCuatro.html#subSeis">Ámbito de las llamadas a funciones</a></li>
+                <li><a href="./proCuatro.html#subSiete">Prueba, depuración y comentario de programas</a></li>
+                <li><a href="./proCuatro.html#subOcho">Concepto de librerías</a></li>
+                <li><a href="./proCuatro.html#subNueve">Uso de librerías</a></li>
+                <li><a href="./proCuatro.html#subDiez">Introducción al concepto de recursividad</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>5.- Gestión de ficheros</span>
             <ul>
-                <li><a href="./proCinco.html#5.1">Concepto y tipos de ficheros</a></li>
-                <li><a href="./proCinco.html#5.2">Diseño y modulación de las operaciones sobre ficheros</a></li>
-                <li><a href="./proCinco.html#5.3">Operaciones sobre ficheros secuenciales</a></li>
-                <li><a href="./proCinco.html#5.4">Control de excepciones</a></li>
+                <li><a href="./proCinco.html#subUno">Concepto y tipos de ficheros</a></li>
+                <li><a href="./proCinco.html#subDos">Diseño y modulación de las operaciones sobre ficheros</a></li>
+                <li><a href="./proCinco.html#subTres">Operaciones sobre ficheros secuenciales</a></li>
+                <li><a href="./proCinco.html#subCuatro">Control de excepciones</a></li>
             </ul>
         </section>
     </main>
