--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -22,12 +22,12 @@
   <main class="main--Apuntes">
     <div class="indice">
       <ol>
-        <li><a href="#2.1">Bloques de un programa de código</a></li>
-        <li><a href="#2.2">Variables. Usos y tipos</a></li>
-        <li><a href="#2.3">Constantes y literales. Tipos y utilidades</a></li>
-        <li><a href="#2.4">Operadores del lenguaje de programación</a></li>
-        <li><a href="#2.5">Conversiones de tipos de clase</a></li>
-        <li><a href="#2.6">Comentarios al código</a></li>
+        <li><a href="#subUno">Bloques de un programa de código</a></li>
+        <li><a href="#subDos">Variables. Usos y tipos</a></li>
+        <li><a href="#subTres">Constantes y literales. Tipos y utilidades</a></li>
+        <li><a href="#subCuatro">Operadores del lenguaje de programación</a></li>
+        <li><a href="#subCinco">Conversiones de tipos de clase</a></li>
+        <li><a href="#subSeis">Comentarios al código</a></li>
       </ol>
     </div>
    <!-- INTRO -->
