--- a/daw/sistemas/indiceSistemas.html
+++ b/daw/sistemas/indiceSistemas.html
@@ -45,69 +45,69 @@
         <section class="temaIndice">
             <span>2.- Administración de software base</span>
             <ul>
-              <li><a href="./sistemasDos.html#2.1">Administración de usuarios y grupos locales</a></li>
-              <li><a href="./sistemasDos.html#2.2">Seguridad de cuentas de usuario</a></li>
-              <li><a href="./sistemasDos.html#2.3">Seguridad de contraseñas</a></li>
-              <li><a href="./sistemasDos.html#2.4">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</a></li>
-              <li><a href="./sistemasDos.html#2.5">Servicio de Nombres de Dominios (DNS)</a></li>
-              <li><a href="./sistemasDos.html#2.6">Archivos de configuración de red</a></li>
-              <li><a href="./sistemasDos.html#2.7">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</a></li>
-              <li><a href="./sistemasDos.html#2.8">Principales comandos de sistemas operativos libres y propietarios</a></li>
+              <li><a href="./sistemasDos.html#subUno">Administración de usuarios y grupos locales</a></li>
+              <li><a href="./sistemasDos.html#subDos">Seguridad de cuentas de usuario</a></li>
+              <li><a href="./sistemasDos.html#subTres">Seguridad de contraseñas</a></li>
+              <li><a href="./sistemasDos.html#subCuatro">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</a></li>
+              <li><a href="./sistemasDos.html#subCinco">Servicio de Nombres de Dominios (DNS)</a></li>
+              <li><a href="./sistemasDos.html#subSeis">Archivos de configuración de red</a></li>
+              <li><a href="./sistemasDos.html#subSiete">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</a></li>
+              <li><a href="./sistemasDos.html#subOcho">Principales comandos de sistemas operativos libres y propietarios</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Administración de la información</span>
             <ul>
-              <li><a href="./sistemasTres.html#3.1">Sistemas de archivos</a></li>
-              <li><a href="./sistemasTres.html#3.2">Tipos de sistemas de archivos</a></li>
-              <li><a href="./sistemasTres.html#3.3">Gestión de sistemas de archivos mediante comandos y entornos gráficos</a></li>
-              <li><a href="./sistemasTres.html#3.4">Gestión de enlaces</a></li>
-              <li><a href="./sistemasTres.html#3.5">Estructura de directorios de sistemas operativos libres y propietarios</a></li>
-              <li><a href="./sistemasTres.html#3.6">Búsqueda de información del sistema mediante comandos y herramientas gráficas</a></li>
-              <li><a href="./sistemasTres.html#3.7">Identificación del software instalado mediante comandos y herramientas gráficas</a></li>
-              <li><a href="./sistemasTres.html#3.8">Gestión de la información del sistema. Rendimiento. Estadísticas</a></li>
-              <li><a href="./sistemasTres.html#3.9">Montaje y desmontaje de dispositivos en sistemas operativos</a></li>
-              <li><a href="./sistemasTres.html#3.10">Automatización</a></li>
-              <li><a href="./sistemasTres.html#3.11">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</a></li>
+              <li><a href="./sistemasTres.html#subUno">Sistemas de archivos</a></li>
+              <li><a href="./sistemasTres.html#subDos">Tipos de sistemas de archivos</a></li>
+              <li><a href="./sistemasTres.html#subTres">Gestión de sistemas de archivos mediante comandos y entornos gráficos</a></li>
+              <li><a href="./sistemasTres.html#subCuatro">Gestión de enlaces</a></li>
+              <li><a href="./sistemasTres.html#subCinco">Estructura de directorios de sistemas operativos libres y propietarios</a></li>
+              <li><a href="./sistemasTres.html#subSeis">Búsqueda de información del sistema mediante comandos y herramientas gráficas</a></li>
+              <li><a href="./sistemasTres.html#subSiete">Identificación del software instalado mediante comandos y herramientas gráficas</a></li>
+              <li><a href="./sistemasTres.html#subOcho">Gestión de la información del sistema. Rendimiento. Estadísticas</a></li>
+              <li><a href="./sistemasTres.html#subNueve">Montaje y desmontaje de dispositivos en sistemas operativos</a></li>
+              <li><a href="./sistemasTres.html#subDiez">Automatización</a></li>
+              <li><a href="./sistemasTres.html#subOnce">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Administración de dominios</span>
             <ul>
-              <li><a href="./sistemasCuatro.html#4.1">Estructura cliente-servidor</a></li>
-              <li><a href="./sistemasCuatro.html#4.2">Protocolo LDAP</a></li>
-              <li><a href="./sistemasCuatro.html#4.3">Concepto de dominio. Subdominio. Requisitos necesarios para montar un dominio</a></li>
-              <li><a href="./sistemasCuatro.html#4.4">Conceptos clave de Active Directory</a></li>
-              <li><a href="./sistemasCuatro.html#4.5">Administración de cuentas. Cuentas predeterminadas</a></li>
-              <li><a href="./sistemasCuatro.html#4.6">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</a></li>
-              <li><a href="./sistemasCuatro.html#4.7">Perfiles móviles y obligatorios</a></li>
-              <li><a href="./sistemasCuatro.html#4.8">Carpetas personales</a></li>
-              <li><a href="./sistemasCuatro.html#4.9">Plantillas de usuario. Variables de entorno</a></li>
-              <li><a href="./sistemasCuatro.html#4.10">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</a></li>
-              <li><a href="./sistemasCuatro.html#4.11">Instalación de Windows Server y Ubuntu Server</a></li>
+              <li><a href="./sistemasCuatro.html#subUno">Estructura cliente-servidor</a></li>
+              <li><a href="./sistemasCuatro.html#subDos">Protocolo LDAP</a></li>
+              <li><a href="./sistemasCuatro.html#subTres">Concepto de dominio. Subdominio. Requisitos necesarios para montar un dominio</a></li>
+              <li><a href="./sistemasCuatro.html#subCuatro">Conceptos clave de Active Directory</a></li>
+              <li><a href="./sistemasCuatro.html#subCinco">Administración de cuentas. Cuentas predeterminadas</a></li>
+              <li><a href="./sistemasCuatro.html#subSeis">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</a></li>
+              <li><a href="./sistemasCuatro.html#subSiete">Perfiles móviles y obligatorios</a></li>
+              <li><a href="./sistemasCuatro.html#subOcho">Carpetas personales</a></li>
+              <li><a href="./sistemasCuatro.html#subNueve">Plantillas de usuario. Variables de entorno</a></li>
+              <li><a href="./sistemasCuatro.html#subDiez">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</a></li>
+              <li><a href="./sistemasCuatro.html#subOnce">Instalación de Windows Server y Ubuntu Server</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>5.- Administración del acceso al dominio</span>
             <ul>
-              <li><a href="./sistemasCinco.html#5.1">Equipos de dominio</a></li>
-              <li><a href="./sistemasCinco.html#5.2">Permisos y derechos</a></li>
-              <li><a href="./sistemasCinco.html#5.3">Administración del acceso a recursos. Samba. NFS</a></li>
-              <li><a href="./sistemasCinco.html#5.4">Permisos de red. Permisos locales. Herencia. Permisos efectivos</a></li>
-              <li><a href="./sistemasCinco.html#5.5">Delegación de permisos</a></li>
-              <li><a href="./sistemasCinco.html#5.6">Listas de control de acceso(ACL Access Control List)</a></li>
-              <li><a href="./sistemasCinco.html#5.7">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</a></li>
+              <li><a href="./sistemasCinco.html#subUno">Equipos de dominio</a></li>
+              <li><a href="./sistemasCinco.html#subDos">Permisos y derechos</a></li>
+              <li><a href="./sistemasCinco.html#subTres">Administración del acceso a recursos. Samba. NFS</a></li>
+              <li><a href="./sistemasCinco.html#subCuatro">Permisos de red. Permisos locales. Herencia. Permisos efectivos</a></li>
+              <li><a href="./sistemasCinco.html#subCinco">Delegación de permisos</a></li>
+              <li><a href="./sistemasCinco.html#subSeis">Listas de control de acceso(ACL Access Control List)</a></li>
+              <li><a href="./sistemasCinco.html#subSiete">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</a></li>
             </ul>
         </section>
         <section class="temaIndice">
           <span>6.- Resolución de incidencias y asistencia técnica</span>
           <ul>
-            <li><a href="./sistemasSeis.html#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
-            <li><a href="./sistemasSeis.html#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
-            <li><a href="./sistemasSeis.html#6.3">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
-            <li><a href="./sistemasSeis.html#6.4">Servidores de actualizaciones automáticas</a></li>
-            <li><a href="./sistemasSeis.html#6.5">Partes de incidencias y protocolos de actuación</a></li>
-            <li><a href="./sistemasSeis.html#6.6">Administración remota</a></li>
+            <li><a href="./sistemasSeis.html#subUno">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
+            <li><a href="./sistemasSeis.html#subDos">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
+            <li><a href="./sistemasSeis.html#subTres">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
+            <li><a href="./sistemasSeis.html#subCuatro">Servidores de actualizaciones automáticas</a></li>
+            <li><a href="./sistemasSeis.html#subCinco">Partes de incidencias y protocolos de actuación</a></li>
+            <li><a href="./sistemasSeis.html#subSeis">Administración remota</a></li>
           </ul>
       </section>
     </main>
