--- a/daw/sistemas/sistemasDos.html
+++ b/daw/sistemas/sistemasDos.html
@@ -19,7 +19,7 @@
     </div>
   </header>
   <div class="contenedorApuntes">
-      <div class="tituloTema" id="2.1"><h2>Tema 2.- Administración de software base</h2></div>
+      <div class="tituloTema" id="subUno"><h2>Tema 2.- Administración de software base</h2></div>
         <h3 class="subTitulo">Introducción</h3>
         <p>El <strong>software base</strong> es el programa encargado de controlar el ordenador.</p>
       <h3 class="subTitulo">Administración de usuarios y grupos locales</h3>
@@ -69,9 +69,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#2.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="2.2">Seguridad de cuentas de usuario</h3>
+      <h3 class="subTitulo" id="subDos">Seguridad de cuentas de usuario</h3>
         <p>Si únicamente nosotros tenemos acceso a un equipo es habitual que lo hagmos como administrador, teneiendo todos los permisos. Es importante que iniciemos sesión con dicha cuenta o con otras que nos birnden permisos avanzados si las operaciones lo requieren. Para maximizar la seguridad debemos tener en cuenta las siguientes pautas:</p>
         <ul>
           <li><strong>Cuentas de administrador:</strong> Cambiar el nombre de la cuenta de administrador y asignarle una contraseña segura.</li>
@@ -80,7 +80,7 @@
         </ul>
         <p><strong>El uso de la cuenta de administrador se debe limitar a aquellas situaciones en las que necesitamos disponer de privilegios:</strong> Cambios de configuración, instalar una nueva aplicación, dar alta a un nuevo usuario, etc..</p>
         <p>Si un virus infecta cuando utilizamos la cuenta administrador, resulta más difícil de eliminar, al tener control total del equipo. En una cuenta estándar la limitación de permisos reducirá sus efectos nocivos.</p>
-      <h3 class="subTitulo" id="2.3">Seguridad de contraseñas</h3>
+      <h3 class="subTitulo" id="subTres">Seguridad de contraseñas</h3>
         <p>Las contraseñas son clave para proteger las cuentas de usuario y la información que se almacena en el equipo, cuanto más segura sea una contraseña, mayor protección nos ofrecerá.</p>
         <p>Los S.O. ofrecen al administrador la posibilidad de establecer cuáles serán las características de las contraseñas.</p>
         <ul>
@@ -101,9 +101,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#2.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="2.4">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</h3>
+      <h3 class="subTitulo" id="subCuatro">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</h3>
         <p>La <strong>dirección IP</strong> constituye el concepto fundamental en para configurar debidamente el servidor de redes. Con ella podemos identificar a cada equipo y consta siempre de cuatro números enteros de 4 bytes separados por puntos que pueden oscilar entre 0 y 255.</p>
         <p>Su formato sera W.X.Y.Z (192.168.1.21), dentro du una misma red no pueden existir dos direcciones IP iguales.</p>
         <ul>
@@ -147,15 +147,15 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#2.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="2.5">Servicio de Nombres de Dominios (DNS)</h3>
+      <h3 class="subTitulo" id="subCinco">Servicio de Nombres de Dominios (DNS)</h3>
         <p>Los servidores DNS son muy importantes, estos tienen la misión de evitar recordar la IP del equipo al que nos conectamos. Es el servidor DNS el que relaciona el nombre escrito (www.google.es) con la ip (142.250.200.68) que tiene alojada la página que queremos visualizar.</p>
         <p>Para comprobar el estado de los servidores DNS en un equipo se realiza habitualmente por consola de comandos y a que es la forma más sencilla y rápida.</p>
         <p>Utilizaremos el comando (ipconfig) en el caso de windows y (ifconfig) en sistemas linux, con la sentencia (/all) para mostrar toda la información.</p>
         <p>Con la instrucción (ping) comprobaremos si el servidor está funcionando de la forma correcta.</p>
         <p>No solo basta con escoger los servidores más rápidos, sino que además es necesario configurar nuestro S.O. correctamente.</p>
-      <h3 class="subTitulo" id="2.6">Archivos de configuración de red</h3>
+      <h3 class="subTitulo" id="subSeis">Archivos de configuración de red</h3>
         <p>Toda la comunicación en red sigue el modelo TCP/IP. Como protocolo, rige las normas al realizar este proceso de comunicación.</p>
         <p>La configuración de nuestro equipo se realiza a través del Panel de control:</p>
         <ol>
@@ -167,9 +167,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#2.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="2.7">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</h3>  
+      <h3 class="subTitulo" id="subSiete">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</h3>  
       <h4 class="apartado">Los pórtatiles poseen unas características propias que debemos tener en cuenta:</h4>
         <ul>
           <li><strong>Mayor vulnerabilidad:</strong> Por su movilidad fuera de casa u oficina resulta más vulnerable a intrusiones. Si nos conectamos a una red inalámbica se duplica. E incluso debemos tener en cuenta que pueden llegar a caer en manos inadecuadas.</li>
@@ -192,9 +192,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#2.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="2.8">Principales comandos de sistemas operativos libres y propietarios</h3>
+      <h3 class="subTitulo" id="subOcho">Principales comandos de sistemas operativos libres y propietarios</h3>
         <p>Existen una serie de comandos que nos ofrecen la posibilidad de movernos y gestionar los S.O. Es conveniente conocer los más utilizados:</p>
         <table>
           <tr>
@@ -252,7 +252,7 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#2.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
   </div>
   <footer class="pieApuntes"><div>- SapheryDesings -</div></footer>
