--- a/daw/sistemas/sistemasTres.html
+++ b/daw/sistemas/sistemasTres.html
@@ -19,7 +19,7 @@
     </div>
   </header>
   <div class="contenedorApuntes">
-    <div class="tituloTema" id="3.1"><h2>Tema 3.- Administración de la información</h2></div>
+    <div class="tituloTema" id="subUno"><h2>Tema 3.- Administración de la información</h2></div>
       <h3 class="subTitulo">Introducción</h3>
         <p>Podemos administrar y organizar la información gracias a los sistemas de archivos, además de administrar las prticiones de los dispositivos de almacenamiento, automatizar tareas y utilizar comodines y herramientas de búsqueda.</p>
       <h3 class="subTitulo">Sistema de archivos</h3>
@@ -36,7 +36,7 @@
         <p>
           Son considerados una división lógica, forman una estructura jerárquica, en la que el usuario pueda buscar o crear archivos en esa ruta. En esa estructura de árbol, existe un directorio raíz (root), que engloba el resto de los directorios y archivos.
         </p>
-      <h3 class="subTitulo" id="3.2">Tipos de sitemas de archivos</h3>
+      <h3 class="subTitulo" id="subDos">Tipos de sitemas de archivos</h3>
         <p>Existen muchos sistemas de archivos distintos, los que usaremos más habitualmente son los siguientes:</p>
         <ul>
           <li><strong>fat32 (Tabla de asignación de archivos)</strong>: Sistema de archivos heredados de MS-DOS que podamos encontrar en las primeras versiones de Windows. Se considera un sistema universal y aún se utiliza con cierta frecuencia.</li>
@@ -47,9 +47,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#3.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="3.3">Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
+      <h3 class="subTitulo" id="subTres">Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
         <p>El gestor de archivos viene predefinido entre las aplicaciones básicas, que son los programas encargados de localizar archivos, sean propios o del S.O.</p>
         <p>En Windows, se accede desde la consola o símbolo del sistema o entorno gráfico Explorer. En linux también podemos acceder a través de la consola o programas como: Nemo, Nautilus, Dolphin, etc...</p>
         <table>
@@ -104,7 +104,7 @@
         <p>Los S.O. actuales incorporan herramientas específicas con un entorno gráfico para que sea más intuitivo. Ejemplos en Windows FreeCommander o UnrealCommander. Aunque los gestores gráficos que nos ofrecen los S.O. son funcionales y aptos para gestionar el sistema.</p>
         <p>En Linux podemos encontrar diferentes variedad de opciones dependiendo de la versión del sistema que utilicemos, aunque la más conocidad es Nautilus.</p>
         <p>Apuntar que la versión gráfica es más intuitiva y amable con el usuario no experimentado, por el contrario resulta más eficiente y rápido teclear comandos en el Símbolo del sistema (Consola).</p>
-      <h3 class="subTitulo" id="3.4">Gestión de enlaces</h3>
+      <h3 class="subTitulo" id="subCuatro">Gestión de enlaces</h3>
         <p>Los navegadores web nos dan la opción de guardar el enlace a una página que nos interese y poder asi acceder a ella más tarde.</p>
         <p>Ejemplo en chrome guardamos pulsando sobre la estrella que se halla en la barra de direcciones.</p>
         <p>En las opciones del navegador encontraremos herramientas para gestionar los diferentes enlaces que almacenemos. Por ejemplo, Administrador de marcadores (Chrome).</p>
@@ -118,9 +118,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#3.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="3.5">Estructura de directorios de sistemas operativos libres y propietarios</h3>
+      <h3 class="subTitulo" id="subCinco">Estructura de directorios de sistemas operativos libres y propietarios</h3>
         <p>La estructura de árbol facilita la labor de los usuarios siempre que dispongamos de privilegios, podmeos modificarla generando nuevas carapetas, eliminando otras, etc..</p>
         <p>Tras instalarse el sistema, la información suele estructurarse de acuerdo con unos estandares.</p>
         <table>
@@ -219,7 +219,7 @@
           </li>
         </ul>
         <p>Aunque esto sea así de forma predeterminada, lo ideal es que los documentos se guarden en una partición independiente. Así será más sencillo hacer backups. Esto también nos permite respaldar el S.O. independientemente de los datos. En caso de fallos podemos restaurarla respetando los documentos.</p>
-      <h3 class="subTitulo" id="3.6">Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
+      <h3 class="subTitulo" id="subSeis">Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
         <p>A veces nos vemos obligados a buscar un determinado archivo o directorio, para ello podemos utilizar diferentes comandos o una interfaz gráfica. Es muy importante que nos dominemos los comodines. Estos símbolos sirven para replazar cadenas de caracteres.</p>
         <p>En Dos y Windows disponemos de los siguientes:</p>
         <ul>
@@ -238,17 +238,17 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#3.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="3.8">Identificación del software instalado mediante comandos y herramientas gráficas</h3>
+      <h3 class="subTitulo" id="subSiete">Identificación del software instalado mediante comandos y herramientas gráficas</h3>
         <p>Para determinar qué software tenemos instalado en un equipo, podemos acceder a Programas y características (Windows). También podemos examinar los programas instalados usando comandos. Buscando con la consola la carpeta Archivos de programa y usar el comando DIR para listar el directorio.</p>
         <p>En Linux desde las herramientas gráficas o mediante el comando dpkg. En estos sistemas nos encontramos con el Centro de Software de Ubuntu, desde donde podemos gestionar las aplicaciones.</p>
-      <h3 class="subTitulo" id="3.8">Gestión de la información del sistema. Rendimiento. Estadística</h3>
+      <h3 class="subTitulo" id="subOcho">Gestión de la información del sistema. Rendimiento. Estadística</h3>
         <p>Para cuantificar el rendimiento de nuestro equipo en windows tenemos que ir a Propiedades de Equipo. Hacer clic en Evaluación de la experiencia en Windows. Otras herramientas complementarias como el Monitor de rendimiento.</p>
         <p>Este nos permite generar informes a partir de los cuales se pueden elaborar estadísticas.</p>
         <p>Como siempre también podemos contar con software  dedicado a este fin, SiSoft.</p>
         <p>En Linux podemos monitorizar el rendimiento empleando Sysstat.</p>
-      <h3 class="subTitulo" id="3.9">Montaje y desmontaje de dispositivos en sistemas operativos</h3>
+      <h3 class="subTitulo" id="subNueve">Montaje y desmontaje de dispositivos en sistemas operativos</h3>
         <p>El montaje/desmontaje de dispositivos es una técnica de administración de discos.</p>
         <p>Una unidad montada es cuando una partición asignada a una carpeta vacía de otra partición. A las unidades montadas se les asigna una etiqueta. Es útil cuando tenemos que compartir particiones o discos con grandes cantidades de usuarios, ya que nos ofrecen la posibilidad de ampliar la capacidad de almacenamiento de una unidad o partición.</p>
         <p>Para el montaje debemos acceder a Administración de disco, listadas todas las particiones, hacer clic con el botón secundario  en la unidad que queremos montar. Pulsamos sobre la opción de Cambiar la letra y rutas de acceso de unidad. Seguidamente sobre Agregar en Montar en la siguiente carpeta NTFS vacía y a continuación, escribimos la ubicación de una carpeta vacía.</p>
@@ -259,9 +259,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#3.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="3.10">Automatización</h3>
+      <h3 class="subTitulo" id="subDiez">Automatización</h3>
         <p>Existen una serie de tareas rutinarias a realizar con regularidad. Existe la posibilidad de automatizarlas para que se ejecuten sin estar pendientes de ellas. Hay dos casos en lo que resulta interesante.</p>
         <ul>
           <li><strong>Copias de seguridad</strong>: Una de las tareas más importantes, también conocidas como backups, incluyen toda la información almacenada en el sistema, que podremos restaurar ante cualquier fallo en cuestión de minutos.</li>
@@ -277,7 +277,7 @@
         </ul>
         <p>Aplicaciones como Advanced BAT 2 EXE Converter nos permite convertir los archivos .bat en ejecutables .exe</p>
         <p>En linux podemos utilizar el servicio Cron, pensado para lanzar tareas regularmente cuando queramos.</p>
-      <h3 class="subTitulo" id="3.11">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
+      <h3 class="subTitulo" id="subOnce">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
         <p>Una unidad física de disco puede dividirse en varias particiones, cada una con un sistema de ficheros diferentes. Estas pueden definirse en el momento de instalar el S.O. o pueden generarse y modificarse desde el propio sistema.</p>
         <p>En Windows podemos crear, eliminar y redimensionar particiones desde el apartado Administración de discos. Para hacer uso de estas herramientas es necesario disponer de privilegios de administrador.</p>
         <p>En Linux algunas de las herramientas más utilizadas son Gparted, Pysdm, Partitionmanager.</p>
@@ -286,7 +286,7 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#3.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
   </div>
   <footer class="pieApuntes"><div>- SapheryDesings -</div></footer>
