--- a/daw/proUno/proUno.html
+++ b/daw/proUno/proUno.html
@@ -22,13 +22,13 @@
   <main class="main--Apuntes">
     <div class="indice"> <!-- INDICE -->
       <ol>
-        <li><a href="#1.1">Representaciones gráficas</a></li>
-        <li><a href="#1.2">Características de los diagramas de flujo</a></li>
-        <li><a href="#1.3">Características del pseudocódigo</a></li>
-        <li><a href="#1.4">Comunicación de un sistema informático</a></li>
-        <li><a href="#1.5">Características del lenguaje de alto nivel</a></li>
-        <li><a href="#1.6">Características del lenguaje de bajo nivel</a></li>
-        <li><a href="#1.7">Lenguajes compilados e interpretados</a></li>
+        <li><a href="#subUno">Representaciones gráficas</a></li>
+        <li><a href="#subDos">Características de los diagramas de flujo</a></li>
+        <li><a href="#subTres">Características del pseudocódigo</a></li>
+        <li><a href="#subCuatro">Comunicación de un sistema informático</a></li>
+        <li><a href="#subCinco">Características del lenguaje de alto nivel</a></li>
+        <li><a href="#subSeis">Características del lenguaje de bajo nivel</a></li>
+        <li><a href="#subSiete">Lenguajes compilados e interpretados</a></li>
       </ol>
     </div>
    <!-- INTRO -->
