--- a/daw/sistemas/sistemasCuatro.html
+++ b/daw/sistemas/sistemasCuatro.html
@@ -19,7 +19,7 @@
     </div>
   </header>
   <div class="contenedorApuntes">
-    <div class="tituloTema" id="4.1"><h2>Tema 4.- Administración de dominios</h2></div>
+    <div class="tituloTema" id="subUno"><h2>Tema 4.- Administración de dominios</h2></div>
       <h3 class="subTitulo">Introducción</h3>
         <p>Mediante la Administración dominios podemos centralizar, simplificar y agilizar muy significativamente las tareas de gestión. Crear un dominio en un equipo servidor al que se conecten equipos cliente resulta muy práctico para administrar redes.</p>
       <h3 class="subTitulo">Estructura cliente-servidor</h3>
@@ -34,9 +34,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="4.2">Protocolo LDAP</h3>
+      <h3 class="subTitulo" id="subDos">Protocolo LDAP</h3>
         <p>Consideramos LDAP(Lightweight Directory Access Protocol) como un protocolo ligero de acceso a directorios. Se utiliza especialmente en las empresas, se emplea para acceder a servicios de directorio.</p>
         <p>Podemos considerarlo como una base de datos pensada para almacenar directorios. La información se organiza de manera jerárquica y cada directorio puede almacenar un amplio abanico de datos.</p>
         <p>Las características y funcionalidades que nos brinda son muchas. Las más destacables son:</p>
@@ -54,9 +54,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="4.3">Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
+      <h3 class="subTitulo" id="subTres">Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
         <p>Dependiendo de si estamos hablando de redes en sentido general o bien de internet podemos encontrar dos deficiones diferentes.</p>
         <ul>
           <li><strong>Dominios de redes:</strong>: De redes en general, comprende un determinado grupo de ordenadores que están conectados y que han otorgado a uno de los equipos la gestión de los usuarios, sus privilegios de acceso y otros datos.</li>
@@ -88,9 +88,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="4.4">Conceptos clave de Active Directory</h3>
+      <h3 class="subTitulo" id="subCuatro">Conceptos clave de Active Directory</h3>
         <p>Es una herramienta de Microsoft para gestionar servidores y administrar en ellos usuarios, grupos, etc.. Podemos gestionar los inicios de sesión de los equipos conectados a la red, definir políticas, etc.</p>
         <p>Debemos aprender la terminología que emplea:</p>
         <ul>
@@ -115,9 +115,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="4.5">Administración de cuentas. Cuentas predeterminadas</h3>
+      <h3 class="subTitulo" id="subCinco">Administración de cuentas. Cuentas predeterminadas</h3>
         <p>En aplicaciones como AD nos interesa generar cuentas de usuario para asignarlas a las distintas personas que van acceder a la red. A nivel interno, las cuentas de usuario son elementos de una base de datos de directorio a los que se les asigna de forma automatizada unos identificadores para garantizar la seguridad. Tras dar de alta a los usuarios, estos pueden acceder y utilizar los recursos del dominio que tengan asignados.</p>
         <p>En Windows podemos gestionar las cuentas entrando en Server Manager y posteriormente en Local Server. Agregar y eliminar usuarios se llevan a cabo desde AD User and Computers.</p>
         <p>Nos permitirá gestionar los usuarios y grupos del dominio de una forma muy similar a las versiones cliente de Windows. También podmos gestionar los equipos enlazados al dominio u otros servidores que gestionen la red, con el objetivo de tener un mayor control sobre las conexiones en dominio.</p>
@@ -139,9 +139,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="4.6">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
+      <h3 class="subTitulo" id="subSeis">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
         <p>A los usuarios dados de alta se les asignarán distintos privilegios, por lo que es vital que le asignemos contraseñas seguras.</p>
         <p>Servicios como AD se encargan de autentificar la identidad de los usuarios. Cuando una persona inicia sesión en el dominio, se comprueban sus credenciales en el directorio. Deben tener su propio nombre de usuario y contraseña.</p>
         <p>Tras solicitar el acceso a los recursos mediante la introducción de los datos, pueden tener acceso si son correctos, en caso contrario se les deniega el acceso.</p>
@@ -149,7 +149,7 @@
         <p>Mediante otros parámetros, como Duración de bloqueos o Restablecer la cuenta, podemos restaurar la cuenta pasado un intervalo de tiempo.</p>
         <p>Otros bloqueos pueden ir en función de si mantienen su sesión iniciada durante demasiado tiempo, etc...</p>
         <p>En AD > Configuración de seguridad local > Directiva de bloqueo de cuentas.</p>
-      <h3 class="subTitulo" id="4.7">Perfiles móviles y obligatorios</h3>
+      <h3 class="subTitulo" id="subSiete">Perfiles móviles y obligatorios</h3>
         <p>Los perfiles de usuario nos permiten asignar a los usuarios del sistema características como los archivos y carpetas que utilizarán y la configuración de su escritorio. Toda esa información se lee y se carga cada vez que un usuario inicia sesión.</p>
         <p>Por defecto, los perfiles suelen ser locales. Tenemos la posibilidad de crear un perfil móvil. Se trata de que el usuario tenga siempre acceso a su perfil, independientemente del equipo desde el que inicie sesión.</p>
         <p>Este perfil lo puede realizar el administrador o un usuario con privilegios. Lo definirán en un directorio del servidor, de modo que quede compartido en red.</p>
@@ -159,13 +159,13 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="4.8">Carpetas personales</h3>
+      <h3 class="subTitulo" id="subOcho">Carpetas personales</h3>
         <p>Cada usuario puede almacenar su información personal en una subcarpeta propia. Esta tendra el nombre del propio usuario y es frecuente que aparezca en los equipos cliente como una unidad de red.</p>
         <p>Hay que tener en cuenta que los directorios que indiquemos para los usuarios del dominio tiene que ser recursos compartidos del servidor.</p>
         <p>Estos serán visibles para los usuarios que indiquemos, aunque esots se podrían asignar directamente a grupos de usuarios para agilizar el proceso. Hay que definir muy bien los permisos que damos a cada usuario para acceder a los recursos compartidos, ya que por defecto vienen con control total.</p>
-      <h3 class="subTitulo" id="4.9">Plantillas de usuario. Variables de entorno</h3>
+      <h3 class="subTitulo" id="subNueve">Plantillas de usuario. Variables de entorno</h3>
         <p>Se utilizan para ahorrarnos una gran cantidad de trabajo. Nos permiten definir una serie de características comunes que posteriormente podemos aplicar a un gran número de usuarios.</p>
         <p>Las variables de entorno, conforman un conjunto de valores que se ejecutan al inicio de la sesión del usuario y afectan al comportamiento de comandos y procesos.</p>
         <p>Las más comunes de Windows son:</p>
@@ -192,9 +192,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="4.10">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
+      <h3 class="subTitulo" id="subDiez">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
         <p>Si la empresa u organización cuya red administramos tiene un elevado número de departamentos y usuarios es fundamental que planeemos una estrategia para estructurarla en grupos.</p>
         <p>Definir permisos y el acceso a los recursos resultará mucho más rápido. Los grupos nos permiten aunar las cuentas de usuario en unidades fácilmente administrables. Cuando añadimos un usuario a un grupo, este recibe todos los privilegios de usuario asignados al grupo y los permisos referentes a sus recursos compartidos.</p>
         <p>Distinguimos entre los siguientes tipos de grupos:</p>
@@ -235,9 +235,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="4.11">Instalación de Windows Server y Ubuntu Server</h3>
+      <h3 class="subTitulo" id="subOnce">Instalación de Windows Server y Ubuntu Server</h3>
         <p>Empecemos por Windows Server 2019:</p>
         <ol>
           <li>Configuramos la BIOS para que se inicie desde el DVD</li>
@@ -274,7 +274,7 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#4.1"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
   </div>
   <footer class="pieApuntes"><div>- SapheryDesings -</div></footer>
